Fix spacing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -33,7 +33,7 @@ img {
 }
 
 .project {
-  margin-top: 25px;
+  margin: 15px;
   padding: 10px;
   text-align: center;
   -moz-box-shadow: 0 0 5px #0B132B;
